// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueBucketLoader display matches snapshot using defaults 1`] = `
<div
  class="vue-bucket-loader"
>
  <input
    class="vue-bucket-loader__input"
    multiple="multiple"
    type="file"
  />
   
  <ul />
</div>
`;

exports[`handle file added matches snapshot after file was added 1`] = `
<div
  class="vue-bucket-loader"
>
  <input
    class="vue-bucket-loader__input"
    multiple="multiple"
    type="file"
  />
   
  <ul />
</div>
`;

exports[`handle file deleted matches snapshot after file was deleted 1`] = `
<div
  class="vue-bucket-loader"
>
  <input
    class="vue-bucket-loader__input"
    multiple="multiple"
    type="file"
  />
   
  <ul>
    <li>
      
      Lorem Second
      
      <button>
        remove
      </button>
    </li>
  </ul>
</div>
`;
